--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <div class="header__fashion">
             <div class="header__logo photographer">
               <a href="index.html">
-                <img src="assets/imgs/logo/logo-light (3).png" alt="Site Logo" class="show-dark">
+                <img src="assets/imgs/logo/logo-light (3).png" height="30px" width="auto" alt="Site Logo" class="show-dark">
                 <img src="assets/imgs/logo/site-logo-dark.png" alt="Site Logo" class="show-light">
               </a>
             </div>
@@ -157,11 +157,11 @@
               <div class="photographer__hero-wrapper">
                 <div class="photographer__hero-content">
                   <h1 class="photographer__title has_char_anim" data-on-scroll="0" data-duration="2">
-                    Hi Honey, <span class="sup-1">it's</span> <span class="sup-2">your</span> Birthday
+                    Hi Honey, <span class="sup-1">it's</span> <span class="sup-2">your</span> Birthday!
                   </h1>
                   <div class="photographer__discription">
                     <div class="cf_text has_fade_anim" data-delay="01">
-                      <p>and It’sgoing to be showcased in a grand style, different from the norms, the romantic developer way!</p>
+                      <p>and It’s going to be showcased in a grand style, different from the norms, the romantic developer way!</p>
                     </div>
                   </div>
                 </div>
@@ -171,7 +171,7 @@
                       <img src="assets/imgs/hero/hero-6/arrow-shape.png" alt="Shape">
                     </div>
                     <div class="cf_text">
-                      <p>Happy birthday <br> IfeAyomidipupo</p>
+                      <p>Say<br> Cheese!!!</p>
                     </div>
                   </div>
 
@@ -203,67 +203,67 @@
                     <div class="swiper-slide">
                       <div class="text-slide-content">
                         <h2 class="title">Happy</h2>
-                        <img src="assets/imgs/icons/star.png" alt="">
+                        <img src="assets/imgs/shape/star.png" alt="">
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="text-slide-content">
                         <h2 class="title">birthday</h2>
-                        <img src="assets/imgs/icons/star.png" alt="">
+                        <img src="assets/imgs/shape/star.png" alt="">
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="text-slide-content">
                         <h2 class="title">to</h2>
-                        <img src="assets/imgs/icons/star.png" alt="">
+                        <img src="assets/imgs/shape/star.png" alt="">
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="text-slide-content">
                         <h2 class="title">you</h2>
-                        <img src="assets/imgs/icons/star.png" alt="">
+                        <img src="assets/imgs/shape/star.png" alt="">
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="text-slide-content">
                         <h2 class="title">Maryam</h2>
-                        <img src="assets/imgs/icons/star.png" alt="">
+                        <img src="assets/imgs/shape/star.png" alt="">
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="text-slide-content">
                         <h2 class="title">I pray</h2>
-                        <img src="assets/imgs/icons/star.png" alt="">
+                        <img src="assets/imgs/shape/star.png" alt="">
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="text-slide-content">
                         <h2 class="title">you get</h2>
-                        <img src="assets/imgs/icons/star.png" alt="">
+                        <img src="assets/imgs/shape/star.png" alt="">
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="text-slide-content">
                         <h2 class="title">the very best</h2>
-                        <img src="assets/imgs/icons/star.png" alt="">
+                        <img src="assets/imgs/shape/star.png" alt="">
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="text-slide-content">
                         <h2 class="title">in this Life</h2>
-                        <img src="assets/imgs/icons/star.png" alt="">
+                        <img src="assets/imgs/shape/star.png" alt="">
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="text-slide-content">
                         <h2 class="title">and the next.</h2>
-                        <img src="assets/imgs/icons/star.png" alt="">
+                        <img src="assets/imgs/shape/star.png" alt="">
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="text-slide-content">
                         <h2 class="title">Bi Fadlillah</h2>
-                        <img src="assets/imgs/icons/star.png" alt="">
+                        <img src="assets/imgs/shape/star.png" alt="">
                       </div>
                     </div>
                   </div>
@@ -589,5 +589,4 @@ Seeing this gorgeous and precious day of yours fills me with joy to the core of 
 </body>
 
 
-<!-- Mirrored from crowdytheme.com/html/info/info-demo/photographer/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 17 Dec 2023 03:57:14 GMT -->
 </html>
