--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="INFO HTML5 Template">
+  <meta name="description" content="Happy Birthday IfeAyomidipupo">
 
-  <title>Happy birthday IfeAyomidipupo</title>
+  <title>Happy Birthday IfeAyomidipupo</title>
 
   <!-- Fav Icon -->
   <link rel="icon" type="image/x-icon" href="assets/imgs/logo/favicon.png">
