--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ Seeing this gorgeous and precious day of yours fills me with joy to the core of 
                             Your baby is waiting for you.
                             The hugs 🤗 and kisses 😘 are already overflowing, come get them! </p>
                             
-                          <p>  Yours in this life and in the Akhirah,
+                          <p>  Yours in this life and in the Akhirah.
                             </p>
                     </div>
                   </div>
@@ -529,7 +529,7 @@ Seeing this gorgeous and precious day of yours fills me with joy to the core of 
         <footer class="footer__area-6 pt-150 cursor_border_hide">
           <div class="container">
             <div class="footer__top-7" data-cursor-text="GET IN TOUCH" data-cursor="xxxl">
-              <p class="footer__subtitle-6 has_fade_anim">( Made with 💕 by)</p>
+              <p class="footer__subtitle-6 has_fade_anim">Made with 💕 by:</p>
               <a href="contact.html">
                 <h2 class="footer__title-6 has_text_reveal_anim">Abdul-Azeez <br> Adeleye</h2>
               </a>
